# hrms

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE
backend/: BUILD  PYTHON_DEV_GUIDE.md  go.mod  pyproject.toml  requirements_lock.txt  update-deps.sh
backend/domains/: BUILD
backend/domains/ai/: BUILD
backend/domains/it-finance/: BUILD
backend/domains/people/: BUILD
backend/domains/people/services/employee-service/: BUILD
backend/domains/platform/: BUILD
backend/domains/talent/: BUILD
backend/domains/workforce-ops/: BUILD
backend/internal/common/: config.go
frontend/: BUILD  package-lock.json  package.json
frontend/web-app/: BUILD
shared/: BUILD
shared/events/: __init__.py  base.py  people.py
shared/proto/common/: common.proto
shared/proto/people/: employee.proto
shared/types/: index.ts
tools/python/: BUILD
tools/scripts/: dev-setup.sh
